# Winhttp_SimpleAPI

./: CMakeLists.txt  LICENSE.md  README.md  Readme.md  WinhttpAPI.cpp  WinhttpAPI.h
.github/workflows/: cmake.yml
CodeConvert/: CodeCvt.cpp  CodeCvt.h
DataStruct/: DataStruct.h
ParamsProcess/: ParamsProcess.cpp  ParamsProcess.h
WinHttpInterface/: APIInterface.cpp  APIInterface.h
